// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basics Multi root component 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block2 = createBlock(\`<span>1</span>\`);
  let block4 = createBlock(\`<span>2</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2 = block2();
    let b3 = text(\`text\`);
    let b4 = block4();
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`basics a class component inside a class component, no external dom 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div>simple vnode</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics a class component inside a class component, no external dom 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    return node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
  }
}"
`;

exports[`basics a component cannot be mounted in a detached node 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics a component inside a component 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div>simple vnode</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics a component inside a component 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span><owl-child-0/></span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2 = node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
    return block1([], [b2]);
  }
}"
`;

exports[`basics can be clicked on and updated 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-text-0/><button owl-handler-1=\\"click\\">Inc</button></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['state'].counter;
    const v1 = ctx['state'];
    let d2 = (e) => {const res = (() => { return v1.counter++ })(); if (typeof res === 'function') { res(e) }};
    return block1([d1, d2]);
  }
}"
`;

exports[`basics can handle empty props 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span><owl-text-0/></span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['props'].val;
    return block1([d1]);
  }
}"
`;

exports[`basics can handle empty props 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2 = node.getChild(\`Child\`, {val: undefined}, key + \`__1\`, ctx);
    return block1([], [b2]);
  }
}"
`;

exports[`basics can mount a component with just some text 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    return text(\`just text\`);
  }
}"
`;

exports[`basics can mount a component with no text 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    return text(\`\`);
  }
}"
`;

exports[`basics can mount a simple component 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>simple vnode</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics can mount a simple component with multiple roots 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block2 = createBlock(\`<span/>\`);
  let block3 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2 = block2();
    let b3 = block3();
    return multi([b2, b3]);
  }
}"
`;

exports[`basics can mount a simple component with props 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span><owl-text-0/></span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['props'].value;
    return block1([d1]);
  }
}"
`;

exports[`basics cannot mount on a documentFragment 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div>content</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics child can be updated 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    return text(ctx['props'].value);
  }
}"
`;

exports[`basics child can be updated 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    return node.getChild(\`Child\`, {value: ctx['state'].counter}, key + \`__1\`, ctx);
  }
}"
`;

exports[`basics class component with dynamic text 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>My value: <owl-text-0/></span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['value'];
    return block1([d1]);
  }
}"
`;

exports[`basics class parent, class child component with props 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-text-0/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['props'].value;
    return block1([d1]);
  }
}"
`;

exports[`basics class parent, class child component with props 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    return node.getChild(\`Child\`, {value: 42}, key + \`__1\`, ctx);
  }
}"
`;

exports[`basics component with dynamic content can be updated 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span><owl-text-0/></span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['value'];
    return block1([d1]);
  }
}"
`;

exports[`basics do not remove previously rendered dom if not necessary 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics do not remove previously rendered dom if not necessary, variation 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><h1>h1</h1><span><owl-text-0/></span></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['state'].value;
    return block1([d1]);
  }
}"
`;

exports[`basics has no el after creation 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>simple</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics higher order components parent and child 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div>a</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics higher order components parent and child 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>b</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics higher order components parent and child 3`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    let b2,b3;
    if (ctx['props'].child==='a') {
      b2 = node.getChild(\`ChildA\`, {}, key + \`__1\`, ctx);
    } else {
      b3 = node.getChild(\`ChildB\`, {}, key + \`__2\`, ctx);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`basics higher order components parent and child 4`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    return node.getChild(\`Child\`, {child: ctx['state'].child}, key + \`__1\`, ctx);
  }
}"
`;

exports[`basics parent, child and grandchild 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div>hey</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics parent, child and grandchild 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    return node.getChild(\`GrandChild\`, {}, key + \`__1\`, ctx);
  }
}"
`;

exports[`basics parent, child and grandchild 3`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    return node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
  }
}"
`;

exports[`basics props is set on root component 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>simple vnode</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics reconciliation alg is not confused in some specific situation 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>child</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics reconciliation alg is not confused in some specific situation 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/><owl-child-1/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2 = node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
    let b3 = node.getChild(\`Child\`, {}, key + \`__2\`, ctx);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`basics same t-keys in two different places 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span><owl-text-0/></span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['props'].blip;
    return block1([d1]);
  }
}"
`;

exports[`basics same t-keys in two different places 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><div><owl-child-0/></div><div><owl-child-1/></div></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2 = node.getChild(\`Child\`, {blip: '1'}, key + \`__1\`, ctx);
    let b3 = node.getChild(\`Child\`, {blip: '2'}, key + \`__2\`, ctx);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`basics simple component with a dynamic text 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-text-0/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['value'];
    return block1([d1]);
  }
}"
`;

exports[`basics simple component, useState 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-text-0/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['state'].value;
    return block1([d1]);
  }
}"
`;

exports[`basics some simple sanity checks (el/status) 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>simple vnode</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics t-elif works with t-component 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>hey</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics t-elif works with t-component 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/><owl-child-1/></div>\`);
  let block2 = createBlock(\`<div>somediv</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2,b3;
    if (ctx['state'].flag) {
      b2 = block2();
    } else if (!ctx['state'].flag) {
      b3 = node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
    }
    return block1([], [b2, b3]);
  }
}"
`;

exports[`basics t-else with empty string works with t-component 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>hey</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics t-else with empty string works with t-component 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/><owl-child-1/></div>\`);
  let block2 = createBlock(\`<div>somediv</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2,b3;
    if (ctx['state'].flag) {
      b2 = block2();
    } else {
      b3 = node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
    }
    return block1([], [b2, b3]);
  }
}"
`;

exports[`basics t-else works with t-component 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>hey</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics t-else works with t-component 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/><owl-child-1/></div>\`);
  let block2 = createBlock(\`<div>somediv</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2,b3;
    if (ctx['state'].flag) {
      b2 = block2();
    } else {
      b3 = node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
    }
    return block1([], [b2, b3]);
  }
}"
`;

exports[`basics t-if works with t-component 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>hey</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics t-if works with t-component 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2;
    if (ctx['state'].flag) {
      b2 = node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`basics t-key on a component with t-if, and a sibling component 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>child</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics t-key on a component with t-if, and a sibling component 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/><owl-child-1/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2,b3;
    if (false) {
      b2 = node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
    }
    b3 = node.getChild(\`Child\`, {}, key + \`__2\`, ctx);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`basics text after a conditional component 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<p>simple vnode</p>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics text after a conditional component 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/><span><owl-text-0/></span></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2;
    if (ctx['state'].hasChild) {
      b2 = node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
    }
    let d1 = ctx['state'].text;
    return block1([d1], [b2]);
  }
}"
`;

exports[`basics three level of components with collapsing root nodes 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div>2</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics three level of components with collapsing root nodes 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    return node.getChild(\`GrandChild\`, {}, key + \`__1\`, ctx);
  }
}"
`;

exports[`basics three level of components with collapsing root nodes 3`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    return node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
  }
}"
`;

exports[`basics throws if mounting on target=null 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span>simple vnode</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics two child components 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div>simple vnode</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics two child components 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    let b2 = node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
    let b3 = node.getChild(\`Child\`, {}, key + \`__2\`, ctx);
    return multi([b2, b3]);
  }
}"
`;

exports[`basics updating a component with t-foreach as root 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    ctx = Object.create(ctx);
    const [k1, v1, l1, c1] = prepareList(ctx['items']);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`item\`] = v1[i1];
      let key1 = ctx['item'];
      c1[i1] = withKey(text(ctx['item']), key1);
    }
    return list(c1);
  }
}"
`;

exports[`basics widget after a t-foreach 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics widget after a t-foreach 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/><owl-child-1/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    ctx = Object.create(ctx);
    const [k2, v2, l2, c2] = prepareList(Array(2));
    for (let i1 = 0; i1 < l2; i1++) {
      ctx[\`elem\`] = v2[i1];
      ctx[\`elem_index\`] = i1;
      let key1 = ctx['elem_index'];
      c2[i1] = withKey(text(\`txt\`), key1);
    }
    ctx = ctx.__proto__;
    let b2 = list(c2);
    let b4 = node.getChild(\`SomeComponent\`, {}, key + \`__1\`, ctx);
    return block1([], [b2, b4]);
  }
}"
`;

exports[`basics zero or one child components 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div>simple vnode</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`basics zero or one child components 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    let b2;
    if (ctx['state'].hasChild) {
      b2 = node.getChild(\`Child\`, {}, key + \`__1\`, ctx);
    }
    return multi([b2]);
  }
}"
`;
